--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+copyright message
+-->
 <head>
 	<title>simple file</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
