--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 copyright message
 -->
 <head>
-	<title>simple file</title>
+	<title>a very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@ copyright message
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			new text here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; git tranining new 2014</p>
 	</footer>
 </body>
 </html>
