changing simple.html after fetch

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@ copyright message
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some interesting
+			testing fetch vs pull
 		</p>
 	</main>
 	<footer class="container">
